2004-07-30  Daniel Steffen  <das@users.sourceforge.net>

	* unix/configure:
	* unix/tcl.m4 (SC_CONFIG_CFLAGS): Darwin: instead of setting PLAT_OBJS 
	to explict object files in tcl.m4, refer to MAC_OSX_OBJS makefile var.
	* unix/Makefile.in: added MAC_OSX_OBJS variable.

2004-07-28  Don Porter  <dgp@users.sourceforge.net>

        * generic/tclMain.c (Tcl_Main, StdinProc):      Append newline only
        * tests/basic.test (basic-46.1):                to incomplete scripts
        as part of multi-line script construction.  Do not add an extra
        trailing newline to the complete script.  [Bug 833150]

2004-07-26  Jeff Hobbs  <jeffh@ActiveState.com>

	*** 8.4.7 TAGGED FOR RELEASE ***

	* tests/io.test (io-61.1): create file in binary mode for x-plat.

2004-07-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/tclThreadAlloc.c: Moved the tclInt.h include to provide
	Tcl_Panic which is now required for non-threaded build.

2004-07-22  Don Porter  <dgp@users.sourceforge.net>

	* tests/eofchar.data (removed):	Test io-61.1 now generates its own
	* tests/io.test:	file of test data as needed.

2004-07-21  Don Porter  <dgp@users.sourceforge.net>
	* win/tclWinDde.c:		Bump to dde 1.2.3 to cover changes
	* library/dde/pkgIndex.tcl:	committed on 2004-06-14.

	* changes:	Updated for Tcl 8.4.7 release.

2004-07-20  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclEvent.c:       Correct threaded obj allocator to
	* generic/tclInt.h:         fully cleanup on exit and allow for
	* generic/tclThreadAlloc.c: reinitialization. [Bug #736426]
	* unix/tclUnixThrd.c:       (mistachkin, kenny)
	* win/tclWinThrd.c:

2004-07-20  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tcl.m4: fixed Darwin autoconf breakage caused by
	recent CFLAGS reordering.
	* unix/configure: regen
	
	* unix/tclConfig.sh.in: replaced EXTRA_CFLAGS with CFLAGS.
	* unix/dltest/Makefile.in: replaced EXTRA_CFLAGS with DEFS.

	* macosx/tclMacOSXBundle.c: dynamically acquire address for